--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,12 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+// Font Awesome
+@import "node_modules/font-awesome/scss/font-awesome";
+
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
